website/versioned_docs/version-3.2/01_introduction/index.mdx
---
id: introduction
title: Overview
slug: /
description: The official Python library to access the Apify API, with automatic retries, async support, and comprehensive API coverage.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

import UsageAsyncExample from '!!raw-loader!./code/01_usage_async.py';
import UsageSyncExample from '!!raw-loader!./code/01_usage_sync.py';

The Apify API client for Python is the official library to access the [Apify REST API](https://docs.apify.com/api/v2) from your Python applications. It provides useful features like automatic retries and convenience functions that improve the experience of using the Apify API.

The client simplifies interaction with the Apify platform by providing:

- Intuitive methods for working with [Actors](https://docs.apify.com/platform/actors), [Datasets](https://docs.apify.com/platform/storage/dataset), [Key-value stores](https://docs.apify.com/platform/storage/key-value-store), and other Apify resources
- Both synchronous and asynchronous interfaces for flexible integration
- Built-in [retries with exponential backoff](../02_concepts/05_retries.mdx) for failed requests
- Comprehensive API coverage with JSON encoding (UTF-8) for all requests and responses

## Prerequisites

`apify-client` requires Python 3.11 or higher. Python is available for download on the [official website](https://www.python.org/downloads/). Check your current Python version by running:

```bash
python --version
```

## Installation

The Apify client is available as the `apify-client` package [on PyPI](https://pypi.org/project/apify-client/) or [on conda-forge](https://anaconda.org/conda-forge/apify-client).

<Tabs>
    <TabItem value="PyPI" label="PyPI" default>
        ```bash
        pip install apify-client
        ```
    </TabItem>
    <TabItem value="conda-forge" label="conda-forge">
        ```bash
        conda install conda-forge::apify-client
        ```
    </TabItem>
</Tabs>

For better request-body compression, opt in to `brotli`, which compresses better than `gzip`, especially for large payloads. Install the optional extra:

<Tabs>
    <TabItem value="PyPI" label="PyPI" default>
        ```bash
        pip install "apify-client[brotli]"
        ```
    </TabItem>
    <TabItem value="conda-forge" label="conda-forge">
        ```bash
        conda install conda-forge::apify-client
        ```
    </TabItem>
</Tabs>

For details, see [HTTP compression](../02_concepts/13_http_compression.mdx).

The client uses [Impit](https://github.com/apify/impit) as its default HTTP transport. To use the built-in [HTTPX](https://github.com/pydantic/httpx2) transport, install the optional `httpx2` extra, which provides Pydantic's maintained continuation of HTTPX:

<Tabs>
    <TabItem value="PyPI" label="PyPI" default>
        ```bash
        pip install "apify-client[httpx2]"
        ```
    </TabItem>
    <TabItem value="conda-forge" label="conda-forge">
        ```bash
        conda install conda-forge::apify-client conda-forge::httpx2
        ```
    </TabItem>
</Tabs>

For synchronous and asynchronous examples and details about the shared architecture, see [HTTP clients](../02_concepts/10_custom_http_clients.mdx).

## Quick example

The following example shows how to run an Actor and retrieve its results:

<Tabs>
    <TabItem value="AsyncExample" label="Async client" default>
        <CodeBlock className="language-python">
            {UsageAsyncExample}
        </CodeBlock>
    </TabItem>
    <TabItem value="SyncExample" label="Sync client">
        <CodeBlock className="language-python">
            {UsageSyncExample}
        </CodeBlock>
    </TabItem>
</Tabs>

> You can find your API token in the [Integrations section](https://console.apify.com/account/integrations) of Apify Console. See the [Quick start guide](./quick-start.mdx) for more details on authentication.
